[package]
name = "c"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

anyhow = "*"
blake2 = "*"
chrono = "*"
clap = { version = "3.2.6", features = ["derive"] }
dirs = "4"
lazy_static = "1.4"
rusqlite = "*"
serde = { version = "*", features = ["derive"] }
serde-pickle = "*"
hex = "0.4"
